fix bug and add http auth

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,12 @@
-PROG= svnup
-SRCS= svnup.c
+# to build svnup, comment out either below
+# for systems which have libmd for md5, choose former
+# for other systems which have openssl, choose latter
+# MDFLAGS= -lmd -lssl
+MDFLAGS= -lssl -lcrypto -DOPENSSL
 
-LDADD= -lssl -lmd
+svnup: svnup.c
+	$(CC) -g -Wall -o $@ $(CFLAGS) $? $(MDFLAGS)   -L/usr/local/opt/openssl/lib -I/usr/local/opt/openssl/include
+	cp svnup.conf /usr/local/etc/svnup.conf
 
-WARNS= 6
-
-MAN= svnup.1 svnup.conf.5
-
-.include <bsd.prog.mk>
-
+clean:
+	rm -f svnup
